[project]
name = "java-dataset-converter-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Liu",email = "Liujason2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
